# west-consumer

./: .gitignore  Dockerfile  compose.yaml  pyproject.toml  requirements.txt
src/: consumer.py  globus.py  main.py  utils.py
src/settings/: consumer.py  local.py  producer.py  production.py
src/settings/config/: access_control_policy.json
